assets/css/main.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 1.1em;
  color: #444;
  padding: 0;
  text-rendering: optimizeLegibility;
}

a {
  text-decoration: none;
  color: #FF4B02;;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: #FF4B02;;
}

.site-header {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  padding: 10px;
  background-color: #EDEDED;
  color: #444;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.55);
}

.site-header h1 {
  margin: 0;
  text-align: center;
  text-shadow: 1px 1px 0px #FFF;
}

.site-header a {
  color: #444;
}

.content {
  padding-top: 3.25em;
  padding-left: 2em;
}

.content h2 {
  text-shadow: 1px 1px 0px #FFF;
}

.site-footer {
  width: 100%;
  height: 2.7em;
  position: absolute;
  bottom: 0;
  left: 0;
  border-top: 1px solid #A9A9A9;
  background-color: #EDEDED;
  font-size: 0.9em;
  color: #444;
  padding: 10px;
}

.site-footer a {
  color: #444;
  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.6);
}

.site-footer ul {
  text-align: center;
  margin: 0;
}

.site-footer li {
  display: inline-block;
}

